turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:67: error: not found: value nbStaps
  nbStaps
  ^Turmite:68: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  rule
  ^